# ml-solution-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yaml  lint.yaml  test.yaml
change_lib_name/: __main__.py  model.py  pipeline.py
tests/: test_dummy.py
